allen/card.css
* {
	box-sizing: border-box;
}

.recipe-listing-wrapper {
	width: 100%;
	margin-top: 20px;
}

.recipe-listing-inner-wrapper {
	margin: auto;
	padding: 0 10px 0 35px;
	text-align: center;
}

.recipe-listing {
	display: inline-block;
	list-style: none;
	margin: 0;
	padding: 0;
	text-align: left;
	font-size: 0;
}

@media (min-width: 1201px) {
	.recipe-listing {
		width: 1125px;
	}
}
 
@media (min-width: 768px) and (max-width: 1200px) {
	.recipe-listing {
		width: 750px;
	}
}
 
@media (min-width: 481px) and (max-width: 767px) {
	.recipe-listing {
		width: 375px;
	}
}
 
@media (max-width: 480px) {
	.recipe-listing {
		width: 375px;
	}
}

.recipe-card {
	display: inline-block;
	list-style: none;
	width: 350px;
	height: 350px;
	margin: 0 25px 25px 0;
	border: 2px solid #bbb;
	vertical-align: top;
	text-align: left;
	font-size: 14px;
}

.recipe-card a,
.recipe-card a:hover {
	color: black;
}

.recipe-card-img {
	height: 70%;
	background-size: cover;
}

.recipe-card-info {
	height: 30%;
	padding: 10px;
	border-top: 0px;
	background-color: white;
	overflow: hidden;
}

.recipe-info-top-wrapper:after {
	clear: both;
	display: block;
	content: "";
	height: 0;
}

.recipe-info-name-wrapper {
	width: 248px; /*248px*/
	float: left;
}

.recipe-name {
	font-size: 20px;
}

.recipe-diet {
	width: 78px;
	float: right;
	vertical-align: top;
	text-align: left;
	font-size: 0;
}

.diet-icon {
	display: inline-block;
	width: 22px;
	height: 22px;
	margin: 0 0 4px 4px;
	padding: 3px 0;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	text-align: center;
	font-size: 12px;
	font-weight: 600;
	color: white;
}

.diet-icon.vegetarian {
	background: #096b00;
}

.diet-icon.vegan {
	background: #2a0;
}

.diet-icon.dairy {
	background: #008a8a;
}

.diet-icon.kosher {
	background: #ab9210;
}

.diet-icon.gluten {
	background: #c46f0e;
}

.recipe-success {
	
}

.recipe-success .success-bar {
	width: 190px;
	height: 10px;
	border: 1px solid #ccc;
	background: #eee;
}

.success-bar .success {
	height: 100%;
	/*#0094e5*/
	/*#48bd13*/
	background-color: #097fb9;
}

.recipe-success > div {
	display: inline-block;
}

.recipe-success .success-text {
	float: right;
}

.recipe-success .success-rate {
	font-weight: bold;
}

